# memory_ios

./: prompts.json  user.json
Memory.xcodeproj/: project.pbxproj
server/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
server/db/content/: 24356100-84fa-465d-aee9-50eb97edc79b.json  465e99b3-0220-4b56-90a0-24a19a8181b1.json  8b8bf01a-2d09-4157-bf51-0a9f8111fe0e.json  9061fea7-4b81-485b-858e-bed59667bb11.json  e1de9088-bdd2-4a7c-a100-ac1fffbda9ff.json  f0668058-bf5d-47c7-984d-57c87133efb1.json
server/db/prompts/: 1.json  2.json  3.json  35d359cc-899c-4cd9-a8e8-2726192f4e71.json  98b69e15-fcde-40dd-a7d0-1072058cf25f.json  cfbc81b0-8781-4854-8f0e-fc83769553ae.json
server/db/stories/: 1.json  1e68b883-9178-47d8-a0a6-b8e766fec868.json  2.json  29a53bf6-6684-40c0-9429-622508ed0885.json  3.json  4c3d861b-f156-4c8d-9086-e4844b1b42e7.json  5baea698-5b4c-4300-898e-b97cfb14ea5a.json  c8bf1e1b-d66e-45cd-8646-be2eb37e6ede.json  d8bc3645-461e-4e6a-a921-2b47a20f5209.json  e76ba6b7-2eda-4edc-b913-fb8736e62a28.json  ff9a0564-8a50-4b37-a5de-cc1f41bf178d.json  mock.json
server/db/users/: 6c81e345-1ab3-463b-8aa2-916da81c1d0c.json
server/migrations/: 20231220020753_stories.sql
server/src/: access.rs  auth.rs  handlers.rs  main.rs  utils.rs
server/src/access/: mod.rs  prompts.rs  schema.rs  story.rs  user.rs
server/src/action/: mod.rs  prompts.rs
server/src/api/: mod.rs
server/src/handlers/: mod.rs  stories.rs  story.rs  user.rs
server/src/mock_api/: prompts.json
server/src/model/: content.rs  mod.rs
server/src/models/: content.rs  mod.rs
(+27 files in other folders)
