[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
clap = { version = "4.4.8", features = ["derive", "env"] }
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum-macros = "0.3.8"
anyhow = "1.0.75"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["v4"] }
